<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_dashboard_linearLayout_root"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="com.se319s18a9.util3d.Fragments.DashboardFragment">

    <ListView
...
            android:text="@string/s_fragment_dashboard_button_settings"
            android:textColor="@color/colorGenericWhite" />

        <Button
            android:background="@color/colorAccent"
            android:gravity="center"
            android:id="@+id/fragment_dashboard_button_logout"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_height="150dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="4dp"
...
