<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="com.se319s18a9.util3d.LoginActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <FrameLayout
        android:id="@+id/activity_login_frameLayout_root"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <fragment
            android:id="@+id/activity_login_fragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:name="com.se319s18a9.util3d.Fragments.LoginFragment" />

    </FrameLayout>

</LinearLayout>